--- a/app/src/main/res/menu/menu_product_detail.xml
+++ b/app/src/main/res/menu/menu_product_detail.xml
@@ -5,15 +5,15 @@
     <!-- Cart Icon -->
     <item
         android:id="@+id/action_cart"
-        android:icon="@android:drawable/ic_menu_gallery"
+        android:icon="@drawable/ic_shopping_cart"
         android:title="Giỏ hàng"
-        app:showAsAction="ifRoom" />
+        app:showAsAction="always" />
 
     <!-- My Orders Icon -->
     <item
         android:id="@+id/action_my_orders"
         android:icon="@android:drawable/ic_menu_my_calendar"
         android:title="Đơn hàng của tôi"
-        app:showAsAction="ifRoom" />
+        app:showAsAction="never" />
 
 </menu>
